@@ -1,6 +1,6 @@
 {
 	"Name":"Briv Gem Farm",
-	"Version": "v1.4.8",
+	"Version": "v1.4.9",
     "Includes" : "IC_BrivGemFarm_Component.ahk",
     "Author" : "Antilectual & mikebaldi1980",
     "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_BrivGemFarm_Performance",
@@ -8,7 +8,7 @@
     "Dependencies" : [
         {
             "Name":"IC Core",
-            "Version":"v0.1.0"
+            "Version":"v0.1.2"
         }
     ]
 }
